--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,7 +16,10 @@ jobs:
         with:
           python-version: 3.8
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+              python -m pip install --upgrade pip
+              pip install -r requirements.txt
+              
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
